# FaceRec

./: .gitignore  CMakeLists.txt  README.md  dockerfile  face.store  face_data.h  http_server.h  main.cpp  network_model.h
.github/workflows/: codeql.yml
model/: README.md
nlohmann/: README.md
src/: face_data.h  face_util.h  http_server.h
